--- a/package.json
+++ b/package.json
@@ -1,15 +1,32 @@
 {
-  "name": "learn-starter",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
-  },
-  "dependencies": {
-    "next": "9.3.5",
-    "react": "16.13.1",
-    "react-dom": "16.13.1"
-  }
+   "name": "kitsune-blog",
+   "version": "0.1.0",
+   "private": true,
+   "scripts": {
+      "dev": "next dev",
+      "build": "next build",
+      "start": "next start"
+   },
+   "dependencies": {
+      "@svgr/webpack": "^5.4.0",
+      "date-fns": "^2.12.0",
+      "gray-matter": "^4.0.2",
+      "lodash.debounce": "^4.0.8",
+      "marked": "^1.0.0",
+      "next": "9.3.5",
+      "nprogress": "^0.2.0",
+      "prismjs": "^1.20.0",
+      "react": "16.13.1",
+      "react-dom": "16.13.1",
+      "react-markdown": "^4.3.1",
+      "reading-time": "^1.2.0",
+      "remark": "^12.0.0",
+      "remark-html": "^11.0.1",
+      "use-dark-mode": "^2.3.1"
+   },
+   "devDependencies": {
+      "postcss-custom-selectors": "^5.1.2",
+      "postcss-preset-env": "^6.7.0",
+      "tailwindcss": "^1.4.4"
+   }
 }
