--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
    },
    "dependencies": {
       "@svgr/webpack": "^5.4.0",
+      "classnames": "^2.2.6",
       "date-fns": "^2.12.0",
       "gray-matter": "^4.0.2",
       "lodash.debounce": "^4.0.8",
@@ -21,7 +22,6 @@
       "react-markdown": "^4.3.1",
       "reading-time": "^1.2.0",
       "remark": "^12.0.0",
-      "remark-html": "^11.0.1",
       "use-dark-mode": "^2.3.1"
    },
    "devDependencies": {
