--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
       "react": "16.13.1",
       "react-dom": "16.13.1",
       "react-markdown": "^4.3.1",
+      "react-modal-image": "^2.5.0",
       "reading-time": "^1.2.0",
       "remark": "^12.0.0",
       "use-dark-mode": "^2.3.1"
