--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
    "scripts": {
       "dev": "next dev",
       "build": "next build",
-      "start": "next start"
+      "start": "next start",
+      "analyze": "BUNDLE_ANALYZE=both next build",
+      "analyze:server": "BUNDLE_ANALYZE=server next build",
+      "analyze:browser": "BUNDLE_ANALYZE=browser next build",
+      "analyze:size": "next build && cat .next/stats.txt"
    },
    "dependencies": {
       "classnames": "^2.2.6",
@@ -18,6 +22,7 @@
       "prismjs": "^1.20.0",
       "react": "16.13.1",
       "react-dom": "16.13.1",
+      "react-hotkeys-hook": "^2.1.3",
       "react-lazy-load": "^3.0.13",
       "react-markdown": "^4.3.1",
       "reading-time": "^1.2.0",
