--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
       "dev": "next dev",
       "build": "next build",
       "start": "next start",
-      "analyze": "BUNDLE_ANALYZE=both next build",
+      "analyze": "cross-env ANALYZE=true next build",
       "analyze:server": "BUNDLE_ANALYZE=server next build",
       "analyze:browser": "BUNDLE_ANALYZE=browser next build",
       "analyze:size": "next build && cat .next/stats.txt"
