--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
    "dependencies": {
       "classnames": "^2.2.6",
       "date-fns": "^2.12.0",
+      "graphql-request": "^1.8.2",
       "gray-matter": "^4.0.2",
       "lodash.debounce": "^4.0.8",
       "marked": "^1.0.0",
@@ -21,9 +22,9 @@
       "nprogress": "^0.2.0",
       "prismjs": "^1.20.0",
       "react": "16.13.1",
+      "react-datocms": "^1.2.4",
       "react-dom": "16.13.1",
       "react-hotkeys-hook": "^2.1.3",
-      "react-lazy-load": "^3.0.13",
       "react-markdown": "^4.3.1",
       "reading-time": "^1.2.0",
       "remark": "^12.0.0",
