--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
       "react-dom": "16.13.1",
       "react-hotkeys-hook": "^2.1.3",
       "react-markdown": "^4.3.1",
+      "react-simple-code-editor": "^0.11.0",
       "reading-time": "^1.2.0",
       "remark": "^12.0.0",
       "use-dark-mode": "^2.3.1"
